--- a/styles/variables.less
+++ b/styles/variables.less
@@ -35,8 +35,8 @@
 @text-color-inverse-very-subtle: #e6e6e6;
 @text-color-heading: #e6e6e6;
 
-@text-color-link: #58f2f4;
-@text-color-link-hover: @isaac-accent;
+@text-color-link: #15c;
+@text-color-link-hover: #15c;
 @text-color-link-active: lighten(@isaac-accent, 10%);
 
 @btn-default-bg-color: #4c4845;
